# eopf-stac

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/eopf_stac/: constants.py  eopf.py  eopf_xarray.py  io.py  main.py
src/eopf_stac/common/: constants.py  stac.py
src/eopf_stac/sentinel1/: assets.py  constants.py  stac.py
src/eopf_stac/sentinel2/: assets.py  constants.py  stac.py
src/eopf_stac/sentinel3/: constants.py  stac.py
tests/: test_cpm_version.py  test_eopf_xarray.py  test_sentinel1.py  test_sentinel2.py  test_sentinel3.py  test_validate_env.py  utils.py
tests/common/: test_calculate_bbox.py  test_eopf_xarray.py  test_s1_identifier.py  test_stac.py
tests/data-files/: S01SIWGRH_20250319T002519_0024_a019_T651.json  S01SIWOCN_20250321T063156_0024_a052_T356.json  S02MSIL1C_20240428T102559_0000_B108_T853.json  S02MSIL2A_20250109T100401_0000_A122_T461.json  S03OLCEFR_20250416T063751_0180_B248_T853.json  S03OLCEFR_20250416T063751_0180_B248_T893_.json  S03OLCLFR_20250416T063751_0180_B248_T378.json  S03OLCLFR_20250416T063751_0180_B248_T691_.json  S03SLSLST_20250428T075538_0180_B035_T196.json  S03SLSRBT_20250428T081931_0180_A178_T725.json
